--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "passlib[bcrypt]>=1.7.4",
     "python-multipart>=0.0.6",
     "mcp>=1.0.0",
+    "fastmcp>=2.11.3",
 ]
 
 [project.optional-dependencies]
