调整包目录结构

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=45", "wheel"]
+requires = ["setuptools>=64", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -12,6 +12,19 @@ authors = [
     {name = "Nike", email = "weinaike@gmail.com"},
 ]
 keywords = ["mcp", "task-management", "memory-management", "api"]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
+]
 dependencies = [
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
@@ -25,22 +38,19 @@ dependencies = [
     "fastmcp>=2.11.3",
 ]
 
-[project.optional-dependencies]
-dev = [
-    "pytest>=7.0.0",
-    "pytest-asyncio>=0.21.0",
-    "black>=23.0.0",
-    "mypy>=1.0.0",
-    "httpx>=0.25.0",
-]
+
+[project.scripts]
+shrimp-server = "shrimp.main:main"
 
 [project.urls]
 Homepage = "https://github.com/weinaike/shrimp"
 Repository = "https://github.com/weinaike/shrimp.git"
 
+# 配置包发现
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["shrimp*"]
 
 [tool.setuptools.package-data]
-"shrimp" = ["py.typed"]
+"*" = ["py.typed"]
+
